organizando los scripts en un new file js

--- a/index.html
+++ b/index.html
@@ -22,33 +22,7 @@
         <button id="muteButton">Mute/Unmute</button>
     </main>
 
-    <script>
-        const video = document.querySelector("video");
-        const button = document.querySelector("button");
-
-        function MediaPlayer(config) { //clase
-            this.media = config.el
-        }
-
-        // añadimos metodos a la clase o prototipo, en este caso se llama play
-        MediaPlayer.prototype.play = function() {
-            this.media.play(); // leemos media, con this guardamos la instancia de MediaPlayer o cualquier otro objeto
-        }
-        MediaPlayer.prototype.pause = function() {
-            this.media.pause();
-        }
-        MediaPlayer.prototype.togglePlay = function() {
-            if(this.media.paused) {
-                this.play();
-            } else {
-                this.pause();
-            }
-        };
-
-        const player = new MediaPlayer({ el: video }); // instanciamos y le pasamos el objeto de configuracion
-
-        button.onclick = () => player.togglePlay();
-    </script>
+    <script src="/assets/index.js"></script>
 
 </body>
 </html>
