Scope: Ambitos de variables, funciones, bloques,  modulos

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <button id="muteButton">Mute/Unmute</button>
     </main>
 
-    <script src="/assets/index.js"></script>
+    <!-- traemos index.js como un modulo -->
+    <script type="module" src="/assets/index.js"></script>
 
 </body>
 </html>
