--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -10,6 +10,7 @@
       <li><a href="/ejercicios/scope.html">Scope</a></li>
       <li><a href="/ejercicios/closures.html">Closures</a></li>
       <li><a href="/ejercicios/this.html"><code>this</code></a></li>
+      <li><a href="/ejercicios/call-apply-bind.html"><code>CALL APPLY BIND</code></a></li>
     </ol>
   </body>
 </html>
