--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -12,6 +12,7 @@
       <li><a href="/ejercicios/this.html"><code>this</code></a></li>
       <li><a href="/ejercicios/call-apply-bind.html"><code>CALL APPLY BIND</code></a></li>
       <li><a href="/ejercicios/prototype.html"><code>Prototype</code></a></li>
+      <li><a href="/ejercicios/prototypal-inheritance.html"><code>Herencia Prototipal</code></a></li>
     </ol>
   </body>
 </html>
