--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -13,6 +13,7 @@
       <li><a href="/ejercicios/call-apply-bind.html"><code>CALL APPLY BIND</code></a></li>
       <li><a href="/ejercicios/prototype.html"><code>Prototype</code></a></li>
       <li><a href="/ejercicios/prototypal-inheritance.html"><code>Herencia Prototipal</code></a></li>
+      <li><a href="/ejercicios/promesas.html"><code>Promesas</code></a></li>
     </ol>
   </body>
 </html>
