--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -14,6 +14,7 @@
       <li><a href="/ejercicios/prototype.html"><code>Prototype</code></a></li>
       <li><a href="/ejercicios/prototypal-inheritance.html"><code>Herencia Prototipal</code></a></li>
       <li><a href="/ejercicios/promesas.html"><code>Promesas</code></a></li>
+      <li><a href="/ejercicios/proxy.html"><code>Proxy</code></a></li>
     </ol>
   </body>
 </html>
