--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -15,6 +15,7 @@
       <li><a href="/ejercicios/prototypal-inheritance.html"><code>Herencia Prototipal</code></a></li>
       <li><a href="/ejercicios/promesas.html"><code>Promesas</code></a></li>
       <li><a href="/ejercicios/proxy.html"><code>Proxy</code></a></li>
+      <li><a href="/ejercicios/generators.html"><code>Generators</code></a></li>
     </ol>
   </body>
 </html>
