Convirtiendo al proyecto completamente a TypeScript

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     </main>
 
     <!-- traemos index.js como un modulo -->
-    <script type="module" src="/assets/index.js"></script>
+    <script type="module" src="/assets/index.ts"></script>
 
 </body>
 
